# bm3d-gpu

./: CMakeLists.txt  CMakeLists_Linux.txt  CMakeLists_Wins.txt  bm3d_pybind.cpp  build.bat  build.sh  build_bm3d_on_Windows.md  pyproject.toml
bm3d_gpu/: __init__.py
include/: bm3d.hpp  bm3d_api.h
src/: bm3d_api.cpp
test/: test.py
